--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css");
 * {
   box-sizing: border-box;
 }
@@ -16,6 +17,15 @@ body {
   margin: 0;
   font-family: "Roboto";
 }
+ul {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /*header*/
 .container {
   width: 100%;
@@ -23,11 +33,16 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
+#header-container {
+  display: flex;
+  justify-content: space-between;
+}
 header {
   width: 100%;
-  top: 0;
   display: flex;
   align-items: center;
+  height: 72px;
+  border-bottom: 1px solid var(--accent);
 }
 
 /*navigation*/
@@ -39,7 +54,7 @@ nav {
 }
 .design-logo {
   font-family: "Raleway";
-
+  margin-right: 76px;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 800;
@@ -94,8 +109,6 @@ nav {
   align-items: center;
   display: flex;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 
 .contacts .mail {
@@ -112,13 +125,12 @@ nav {
 .section1 {
   display: flex;
   background-color: var(--dark);
-  height: 600px;
+  padding: 188px 472px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 h1 {
-  width: 511px;
   font-weight: 700;
   font-size: 56px;
   line-height: 60px;
@@ -186,13 +198,15 @@ h2 {
 }
 /*Services*/
 /*section3*/
+#section3 {
+  padding-bottom: 120px;
+}
 h2 {
   text-transform: capitalize;
   text-align: center;
   margin-bottom: 72px;
 }
 .options-list {
-  padding: 0;
   justify-content: center;
   gap: 24px;
   list-style-type: none;
@@ -206,12 +220,10 @@ h2 {
 /*Our team*/
 /*section4*/
 #team-members-section {
-  margin-top: 120px;
-  padding: 120px 0 120px 0;
+  padding: 120px 0;
   background-color: var(--light);
 }
 .team-members-list {
-  padding: 0;
   justify-content: center;
   gap: 24px;
   list-style-type: none;
@@ -287,7 +299,6 @@ footer {
 }
 
 .work-examples {
-  padding: 0;
   justify-content: center;
   gap: 24px;
   list-style-type: none;
@@ -296,9 +307,9 @@ footer {
   margin-bottom: 120px;
 }
 .work-item {
-  flex-basis: calc((100% - 48px) / 3);
+  flex-basis: calc((100% - 52px) / 3);
   background: white;
-  border: 0 solid var(--accent);
+  border: 1px solid var(--accent);
 }
 .work-item-title {
   font-weight: 500;
@@ -312,4 +323,7 @@ footer {
   line-height: 24px;
   letter-spacing: 0.02em;
   color: var(--text);
+}
+.work-description {
+  padding: 32px 0 32px 16px;
 }
